# Velox-Core

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: advanced_demo.py  dashboard_demo.py  feature_demo.py  manual_test.py  new_features_demo.py  openai_demo.py  real_world_test.py  shadow_demo.py
velox/core/: __init__.py  context.py  engine.py  pipeline.py
velox/layers/: __init__.py  advanced_dashboard.py  auto_tooling.py  base.py  caching.py  cost_optimizer.py  dashboard.py  logging.py  pii_guard.py  resilience.py  semantic_router.py  shadow.py
velox/providers/: __init__.py  anthropic.py  base.py  google.py  groq.py  mistral.py  mock.py  openai.py
