[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velox-core"
version = "0.1.0"
description = "High-Performance Middleware Engine for LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Zied Boughdir", email = "ZiedBoughdir@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
    "colorama>=0.4.6"
]

[project.urls]
Homepage = "https://github.com/example/velox-core"

[tool.hatch.build.targets.wheel]
packages = ["velox"]
